--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1 class="section-header"> Hackathon </h1>
+    <h1 class="section-header"> Covid Buddy </h1>
+    <div>
     <section>
       <!-- navigation bar? -->
       <div id="nav-container">
         <!--the hastags will be replaced with div names later -->
-        <a href="#" id="nav-links">Go To Corona Advice</a>
-        <a href="#" id="nav-links">Go to (something here) Advice</a>
+        <a href="#" id="nav-links">Get To Corona Advice</a>
+        <a href="#" id="nav-links">Get To (something here) Advice</a>
+        <a href="https://www.cdc.gov" id="nav-links">CDC Resources</a>
       </div>
 
     </section>
@@ -46,27 +48,69 @@
       </form>
     </section>
 
-    <section> <!--advice area-->
+    <section> <!--advice area--> <!-- how would the advice be displayed? through an alert box? -->
     </section>
 
     <section>
-      <h1><br><br>Covid Info Center</h1>
+      <h1><br>Covid Info Center</h1>
            <!--Searchbar-->
         <div class="topnav">
           <input id="searchbar" onkeyup="search_covid()" type="text"
         name="search" placeholder="Search...">
-          <ol id='list'> 
-            <li class="animals">What to do when you get Covid-19</li> 
-            <li class="animals">Quarantine protocols</li> 
-            <li class="animals">Covid-19 testing</li> 
-            <li class="animals">Vaccination Information</li> 
-            <li class="animals">Covid </li>  
-          </ol>
+          <ul id='list'> 
+            <li class="covid-options">What to do when you get Covid-19</li> 
+            <li class="covid-options">Quarantine protocols</li> 
+            <li class="covid-options">Covid-19 testing</li> 
+            <li class="covid-options">Vaccination Information</li> 
+            <li class="covid-options">Virus information</li>
+            <li class="covid-options">Symptoms</li> 
+            <li class="covid-options">Live tracker</li>  
+          </ul>
         </div>
+        <br>
       <!--End of Searchbar-->
 
     </section>
 
+    <section>
+      <h2> What to do when you get Covid-19? </h2> 
+      <p> Stay home as much as possible, and away from other people. If you live with other people, stay in a specific room and wear a mask around others. Get rest, make sure to stay hydrated. Monitor your symptoms and get help from a healthcare professional if your symptoms get worse. If you have any medical appointments, let your medical professional know you have Covid-19. </p>
+    </section>
+
+    <section>
+      <h2>Quarantine protocols</h2>
+      <p> </p>
+    </section>
+
+    <section>
+      <h2>Covid-19 testing</h2>
+      <p> There are a many Covid-19 testing sites available for free. Contact your health care provider or visit your state health department's website to find the lasted details and locations to get a test.  </p>
+    </section>
+
+    <section>
+      <h2>Vaccination Information</h2>
+      <p> </p>
+    </section>
+
+    <section>
+      <h2>Virus information</h2>
+      <p> </p>
+    </section>
+
+    <section>
+      <h2>Symptoms</h2>
+      <p> </p>
+    </section>
+    
+    <section>
+      <h2>Live tracker</h2>
+      <p> </p>
+    </section>
+
+</div>
+    <footer class="foot">
+      © Copyright 2021 - Amrik | Marko | Wendy
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
@@ -81,11 +125,5 @@ actually more like 5 mins lol
 okay so our ideas are to make a covid related website that can take in user input about themselves such as their condition, age, location, and using their input, we give them advice about what they should do. The website also would have other features such as a covid info section, and a a tracker of the input from other users.
 
 we pretty much have 3 sections: user input, covid info, and input history
-ok
-sie 
-oh yeah with the different secctions are we going t put them all on one long page or have different tabs that we can click on?
 
-yeah how about we start with just a page
-
-I'll be back soon but i think the idea is good so we can split up sections
 --> 
